[project]
name = "json_exporter"
dynamic = [
    "version"
]
description = "Export metrics from JSON HTTP(S) API endpoints"
readme = "README.md"
authors = [
  {name = "Ids van der Molen", email = "i.van.der.molen@catawiki.nl"}
]
license.file = "LICENSE.TXT"
requires-python = ">=3.8"
keywords = ["prometheus", "json", "exporter"]
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 5 - Production/Stable",
    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    # pick a classifier from https://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Topic :: Utilities",
    # Pick your license as you wish (should match "license" above)
    # or choose from https://choosealicense.com
    "License :: OSI Approved :: MIT License",
    # Specify the Python versions you support here. In particular, ensure
    # that you indicate whether you support Python 2, Python 3 or both.
    "Programming Language :: Python :: 3",
]
dependencies = [
    "jsonpath-ng==1.6.1",
    "prometheus-client==0.21.0",
    "pyyaml==6.0.2",
    "requests==2.32.3",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
]

[project.scripts]
json_exporter = "json_exporter.main:main"
